Rerun service builder
git-svn-id: svn://svn.liferay.com/repos/public/plugins/trunk@12465 05bdf26c-840f-0410-9ced-eb539d925f36